--- a/01_Introduction.ipynb
+++ b/01_Introduction.ipynb
@@ -63,9 +63,14 @@
     "tags": []
    },
    "source": [
-    "\n",
     "As you can see *print* is used to write/output a value.\n",
     "*input* is used to read a value which we can then print.\n",
+    "\n",
+    "# Programs\n",
+    "A program is a set of instructions that a computer can execute to perform a specific task. In Python, a program is typically written in a text file with a .py extension. When you run the program, the Python interpreter reads the code and executes it line by line.\n",
+    "Generally, a program requires input, processing, and output. The input is the data that the program will work with, the processing is the logic and calculations performed on that data, and the output is the result of the program's execution.\n",
+    "\n",
+    "<img src=\"img/01/intro_1.gif\" alt=\"Python Program c/o https://movementwithskill.com/2021/06/30/the-brain-the-nervous-system-and-the-body-part-1/ width=\"600\"/>\n",
     "\n",
     "\n",
     "# Variables\n",
@@ -394,6 +399,18 @@
     "\n",
     "# Ex 4 - code for question 4\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "988eb822",
+   "metadata": {},
+   "source": [
+    "## F strings\n",
+    "F-strings are a way to format strings in Python. They allow you to embed expressions inside string literals, using curly braces `{}`. This makes it easy to create dynamic strings that include variable values or calculations.\n",
+    "F-strings are prefixed with the letter 'f' or 'F' before the opening quotation mark. This tells Python to evaluate any expressions inside the curly braces and insert their values into the string.\n",
+    "F-strings are a powerful and convenient way to format strings in Python, making it easier to create dynamic and readable output.\n",
+    "[W3Schools Python F-Strings](https://www.w3schools.com/python/python_fstrings.asp)"
    ]
   }
  ],
