updated broken img links

--- a/01_Introduction.ipynb
+++ b/01_Introduction.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "7989b4aa-e616-499e-a3a9-3810e5f1bf99",
    "metadata": {
     "editable": false,
@@ -70,7 +70,7 @@
     "A program is a set of instructions that a computer can execute to perform a specific task. In Python, a program is typically written in a text file with a .py extension. When you run the program, the Python interpreter reads the code and executes it line by line.\n",
     "Generally, a program requires input, processing, and output. The input is the data that the program will work with, the processing is the logic and calculations performed on that data, and the output is the result of the program's execution.\n",
     "\n",
-    "<img src=\"img/01/intro_1.gif\" alt=\"Python Program c/o https://movementwithskill.com/2021/06/30/the-brain-the-nervous-system-and-the-body-part-1/ width=\"600\"/>\n",
+    "<img src=\"img/01/intro_1.gif\" alt=\"Python Program c/o https://movementwithskill.com/2021/06/30/the-brain-the-nervous-system-and-the-body-part-1/\" width=\"600\"/>\n",
     "\n",
     "\n",
     "# Variables\n",
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "91275043-83a2-4357-b2a1-275bb2234e45",
    "metadata": {
     "editable": false,
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "a3dd3c15-709c-461e-90d8-ff2c28e77208",
    "metadata": {
     "editable": false,
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "83444637-df2e-4ca6-9bcc-38cbabdb2093",
    "metadata": {
     "editable": false,
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "175f78f7-e6cf-4a1a-b90b-ef74728bc16f",
    "metadata": {
     "editable": false,
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "af9c68e0-3aa5-410a-be04-9ffcfaab7331",
    "metadata": {
     "editable": true,
