--- a/05_Functions.ipynb
+++ b/05_Functions.ipynb
@@ -55,10 +55,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "848fd466",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello\n",
+      "Hello\n",
+      "Hello\n",
+      "Hello\n",
+      "Hello\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Hello\")\n",
     "print(\"Hello\")\n",
@@ -69,15 +81,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "b54afe8a",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The sum of 1 and 2 is 3\n"
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: ''",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m num1 = \u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mEnter first number: \u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      2\u001b[39m num2 = \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mEnter second number: \u001b[39m\u001b[33m\"\u001b[39m))\n\u001b[32m      3\u001b[39m result = num1 + num2\n",
+      "\u001b[31mValueError\u001b[39m: invalid literal for int() with base 10: ''"
      ]
     }
    ],
@@ -319,11 +335,12 @@
    "source": [
     "# function definition\n",
     "\n",
+    "\n",
     "# ----- Tests -------\n",
     "assert subtract_numbers(10, 5) == 5\n",
     "assert subtract_numbers(20, 10) == 10\n",
     "assert subtract_numbers(0, 0) == 0\n",
-    "assert subtract_numbers(-5, -5) == -10"
+    "assert subtract_numbers(-5, -5) == 0"
    ]
   },
   {
