added globals to functions

--- a/06_Practice_Assessment.ipynb
+++ b/06_Practice_Assessment.ipynb
@@ -140,12 +140,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "c616747c",
    "metadata": {},
    "outputs": [],
    "source": [
     "def add_income():\n",
+    "    global budget\n",
+    "    global grocery_list\n",
+    "\n",
     "    print(\"Add an income\")\n",
     "\n",
     "    # complete the function"
@@ -153,12 +156,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "3c087e63",
    "metadata": {},
    "outputs": [],
    "source": [
     "def add_expense():\n",
+    "    global budget\n",
+    "    global grocery_list\n",
+    "    \n",
     "    print(\"Add an expense\")\n",
     "\n",
     "    # complete the function\n",
@@ -182,6 +188,9 @@
    ],
    "source": [
     "def view_budget():\n",
+    "    global budget\n",
+    "    global grocery_list\n",
+    "\n",
     "    print(\"View budget\")\n",
     "\n",
     "    # complete the function\n"
@@ -189,12 +198,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "af687ff4",
    "metadata": {},
    "outputs": [],
    "source": [
     "def view_transactions():\n",
+    "    global budget\n",
+    "    global grocery_list\n",
+    "    \n",
     "    print(\"View transactions\")\n",
     "\n",
     "    # complete the function"
@@ -202,12 +214,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "eef07770",
    "metadata": {},
    "outputs": [],
    "source": [
     "def menu():\n",
+    "    global budget\n",
+    "    global grocery_list\n",
+    "    \n",
     "    print(\"Budget Tracker\")\n",
     "    print(\"1. Add grocery income or expense\")\n",
     "    print(\"2. View the current budget balance\")\n",
