--- a/06_Practice_Assessment_2.ipynb
+++ b/06_Practice_Assessment_2.ipynb
@@ -178,6 +178,9 @@
    "source": [
     "# this function is a placeholder for adding a transaction\n",
     "def add_transaction():\n",
+    "    global balance\n",
+    "    global transaction_history\n",
+    "    \n",
     "    print(\"------------- Add Transaction -------------\")\n",
     "    # complete the function to add a transaction\n",
     "    amount = float(input(\"Enter the transaction amount: \"))\n",
@@ -188,13 +191,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "id": "f9ef7d4e",
    "metadata": {},
    "outputs": [],
    "source": [
     "# this function is a placeholder for viewing the balance\n",
     "def view_balance():\n",
+    "    global balance\n",
+    "    global transaction_history\n",
+    "    \n",
     "    print(\"------------- View Balance -------------\")\n",
     "\n",
     "    # complete the function to view the balance"
@@ -202,13 +208,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "id": "25d118d7",
    "metadata": {},
    "outputs": [],
    "source": [
     "# this function is a placeholder for viewing transaction history\n",
     "def view_transaction_history():\n",
+    "    global balance\n",
+    "    global transaction_history\n",
+    "    \n",
     "    print(\"------------- View Transaction History -------------\")\n",
     "    for transaction in transaction_history:\n",
     "        print(f\"Amount: {transaction[0]}\")\n",
@@ -225,6 +234,10 @@
     "# debug and complete the functions below\n",
     "\n",
     "def menu():\n",
+    "    global balance\n",
+    "    global transaction_history\n",
+    "    \n",
+    "    print(\"--------------------------------------------\")\n",
     "    print(\"Please choose and option:\")\n",
     "    print(\"1. Add a transaction\") \n",
     "    print(\"2. View balance\")\n",
